<resources>
    <string name="app_name">Atomic</string>
    <string name="personalization_settings">Personalization</string>
    <string name="app_version" translatable="false">v5.0.3m-Build.228</string>
    <string name="next_sale_start" translatable="false" >2024/08/05</string>
    <string name="next_sale_end" translatable="false" >2024/09/15</string>
    <string name="open_table_button">Open table</string>
    <string name="account">Account</string>
    <string name="learning_games_nav">Flashcards</string>
    <string name="search">Search Elements</string>
    <string name="search_elements">Search For Elements</string>
    <string name="element_number">Element Number</string>
    <string name="blog">Blog</string>
    <string name="Tables">Tables</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="Dictionary">Dictionary</string>
    <string name="New">New</string>
    <string name="social_media_header">Connect with us</string>
    <string name="display_mode">Display Mode</string>
    <string name="element_name_default">Element Name (Default)</string>
    <string name="atomic_weight">Atomic Weight</string>
    <string name="boiling_point">Boiling Point</string>
    <string name="melting_point">Melting Point</string>
    <string name="year_discovered">Year Discovered</string>
    <string name="fusion_heat">Fusion Heat</string>
    <string name="vaporization_heat">Vaporization Heat</string>
    <string name="poissons_ratio">Poisson\'s Ratio</string>
    <string name="youngs_modulus">Young\'s Modulus</string>
    <string name="bulk_modulus">Bulk Modulus</string>
    <string name="shear_modulus">Shear Modulus</string>
    <string name="electrical_resistivity">Electrical Resistivity</string>
    <string name="random_element">Random Element</string>
    <string name="comparison_title_format">%1$s | %2$s</string>
    <string name="pro_title">PRO Version</string>
    <string name="get_pro_title">Get PRO Version</string>
    <string name="pro_descr" >\'Atomic - Periodic Table\' is a free and open-source application made by me on my spare-time in Sweden. By purchasing the PRO-version you help support the development while also receiving additional data and features!</string>
    <string name="member_title">PRO Member Page</string>
    <string name="member_desch" >Thanks for supporting the development of \'Atomic - Periodic Table\'. On this page information about your PRO perks will be available as more PRO features get added.</string>
    <string name="member_already">You\'re a PRO member!</string>
    <string name="member_btn">Your PRO Perks</string>
    <string name="pro_get_more_out" >Get more out of Atomic</string>
    <string name="pro_features_title" >Features of PRO-Version:</string>
    <string name="pro_features_descr" >Explore some of the many features of the PRO-Version and what they include.</string>
    <string name="pro_upgrade_to_pro" >Upgrade to PRO</string>
    <string name="pro_additional_data" >Additional Data</string>
    <string name="pro_additional_data_descr" >Additional data such as hardness properties (mohs-, vickers-, and brinell hardness) as well as sound speed, Poisson Constant, Young\'s-, Bulk- and Shear modulus etc. Also information about identification of minerals.</string>
    <string name="pro_additional_tables" >Additional Tables</string>
    <string name="pro_additional_tables_descr" >Additional tables including a nuclide table, poisson\'s ratio table, constants table, geology table etc, with more coming in the future</string>
    <string name="pro_better_calculator" >Better Calculator</string>
    <string name="pro_better_calculator_descr" >An enhanced calculator with the possibility to save molar weights of different compounds in the favorite page.</string>
    <string name="pro_better_ai" >Additional AI Features</string>
    <string name="pro_better_ai_descr" >Unlock all features of the AI agent, with quiz, access to pro data and much more</string>
    <string name="pro_additional_flashcards">Additional Flashcards and Sync</string>
    <string name="pro_additional_flashcards_descr">Access to additional flashcards, more lives and syncing of your progress</string>
    <string name="pro_additional_sync">Sync for notes and progress</string>
    <string name="pro_additional_sync_descr">Enable sync for notes and progress to make your studies easier on all of your devices</string>
    <string name="pro_additional_visualisations" >Additional Visualisations</string>
    <string name="pro_additional_visualisations_descr" >Access to more visualisations in the main table such as Poisson\'s Ratio, bulk modulus etc.</string>
    <string name="pro_already_purchased_title" >Already purchased Atomic - Periodic Table PRO?</string>
    <string name="pro_already_purchased_check" >Check product on account</string>
    <string name="pro_price_loading" >retrieving price...</string>
    <string name="pro_price_discount" translatable="false" >pro_price_discount</string>
    <string name="element_description_title">Description</string>
    <string name="element_more_title">Additional Properties</string>
    <string name="element_speed_sound">Speed of sound:</string>
    <string name="element_elastic_modulus">Elastic modulus:</string>
    <string name="element_young_modulus" >Young\'s modulus:</string>
    <string name="element_shear_modulus" >Shear modulus:</string>
    <string name="element_bulk_modulus" >Bulk modulus:</string>
    <string name="element_poisson_ratio">Poisson\'s ratio:</string>
    <string name="abundance_title" >Abundance</string>
    <string name="abundance_earth_crust" >In earth\'s crust</string>
    <string name="abundance_earth_soils" >In earth\'s soil</string>
    <string name="abundance_urban_soil" >In urban soil</string>
    <string name="abundance_sea_water" >In sea water</string>
    <string name="abundance_crustal_rocks" >In crustal rocks</string>
    <string name="abundance_sun" >In sun atoms</string>
    <string name="abundance_solar_system" >In solar system atoms</string>
    <string name="favorite_settings_title">Favorite Bar</string>
    <string name="favorite_settings_general">General</string>
    <string name="favorite_settings_temperatures">Temperatures</string>
    <string name="favorite_settings_atomic_properties">Atomic properties</string>
    <string name="favorite_settings_thermodynamics">Thermodynamic</string>
    <string name="favorite_settings_electromagnetic">Electromagnetic Properties</string>
    <string name="favorite_settings_nuclear">Nuclear</string>
    <string name="show_molar_mass" >Show Molar Mass</string>
    <string name="show_stp_phase" >Show STP Phase</string>
    <string name="show_electronegativity" >Show Electronegativity</string>
    <string name="show_density">Show Density</string>
    <string name="science_daily_description" translatable="false">Random science facts delivered daily</string>
    <string name="ai_quick_ask_description" translatable="false">Ask Science AI anything instantly</string>
    <string name="element_quick_nav_description" translatable="false">Quick navigation to Periodic Table, Quiz, and AI tools</string>
    <string name="widget_nav_table">Table</string>
    <string name="widget_nav_quiz">Quiz</string>
    <string name="widget_nav_ai">AI</string>
    <string name="widget_nav_molar">Molar</string>
    <string name="science_daily_title">Science Daily Fact</string>
    <string name="widget_ask_science_ai">Ask Science AI</string>
    <string name="widget_fact_placeholder" translatable="false">Did you know? Oxygen is the most abundant element in Earth\'s crust!</string>
    <string name="ai_rich_overview_basic_facts">Basic Facts</string>
    <string name="ai_rich_overview_where_found">Where is %1$s found?</string>
    <string name="ai_rich_overview_applications">Applications &amp; Uses</string>
    <string name="ai_rich_overview_etymology">Origin &amp; History</string>
    <string name="ai_rich_overview_biological">Biological Role</string>
    <string name="ai_rich_overview_properties">Properties</string>
    <string name="ai_rich_overview_advanced">Advanced Atomic Data</string>
    <string name="ai_rich_overview_safety">Safety &amp; Hazards</string>
    <string name="ai_rich_overview_isotopes">Notable Isotopes</string>
    <string name="ai_rich_overview_compounds">Common Compounds</string>
    <string name="kelvin" translatable="false" >Kelvin</string>
    <string name="celsius" translatable="false" >Celsius</string>
    <string name="fahrenheit" translatable="false" >Fahrenheit</string>
    <string name="show_boiling_point" >Show Boiling Point</string>
    <string name="ask_atomic">Ask Atomic</string>
    <string name="ai_beta_badge">Beta</string>
    <string name="ai_hint">Ask me anything...</string>
    <string name="ai_lang_switched">AI language switched to: %1$s 🌐</string>
    <string name="ai_no_data">Hmm, I couldn\'t find information about that. Try asking about an element like \'oxygen\' or \'gold\'!</string>
    <string name="ai_related_label">Related info:</string>
    <string name="ai_related_offer">I found local related info. Ask \'show related\' to see it.</string>
    <string name="ai_related_offer_lang">I found local related info but not in your selected language. Try switching language or ask anyway.</string>
    <string name="ai_greeting">Hey there! 👋 I\'m your chemistry buddy. Ask me anything about elements!</string>
    <string name="ai_encouragement">Great question! 🌟</string>
    <string name="ai_comparing_title">Comparing %1$s:</string>
    <string name="ai_higher_than">%1$s has a higher %2$s than %3$s.</string>
    <string name="ai_lower_than">%1$s has a lower %2$s than %3$s.</string>
    <string name="ai_same_value">Both have the same %1$s!</string>
    <string name="ai_property_is">%1$s\'s %2$s is %3$s.</string>
    <string name="ai_recap_is">Just to recap, %1$s\'s %2$s is %3$s.</string>
    <string name="ai_no_property_data">I\'m sorry, I don\'t have the data for %1$s\'s %2$s right now.</string>
    <string name="ai_field_abundance_earth_crust">crustal abundance</string>
    <string name="ai_field_abundance_earth_soils">abundance in soil</string>
    <string name="activity_ph_methyl_orange" >Methyl-orange</string>
    <string name="activity_ph_bromothymol_blue" >Bromothymol Blue</string>
    <string name="activity_ph_congo_red" >Congo Red</string>
    <string name="activity_ph_phenolphthalein" >Phenolphthalein</string>
    <string name="user_title" >User Page</string>
    <string name="user_achievements" >Achievements</string>
    <string name="login_for_sync_and_more">Login to sync data</string>
    <string name="sign_out">Sign out</string>
    <string name="all_core_features">All Core Features</string>
    <string name="pro_version">PRO Version</string>
    <string name="unlock_advanced_data_and_extra_atomic_content">Unlock advanced data and extra Atomic content.</string>
    <string name="most_advanced">Most advanced</string>
    <string name="pro_plus_version">PRO+ Version</string>
    <string name="unlock_advanced_data_and_additional_flashcards">Unlock advanced data and additional flashcards.</string>
    <string name="get_pro_plus_button">Get PRO+</string>
    <string name="usage_statistics">Usage Statistics</string>
    <string name="elements_opened">Elements opened</string>
    <string name="calculations_stat">Calculations</string>
    <string name="searches">Searches</string>
    <string name="rate_app">Rate App</string>
    <string name="rate_app_description">Let us know what you think of the app, by rating it on the Play Store!</string>
    <string name="rate">Rate</string>
    <string name="share_app">Share App</string>
    <string name="share_app_description">If you find the app useful, please share it with your friends and others!</string>
    <string name="share">Share</string>
    <string name="pro_user_badge">PRO-User</string>
    <string name="get_pro">Get PRO</string>
</resources>