<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/chip_bar_ph"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollIndicators="none"
    android:scrollbars="none">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/indicator_chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:chipSpacingHorizontal="8dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/bromothymol_blue_btn"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_ph_bromothymol_blue" />

        <com.google.android.material.chip.Chip
            android:id="@+id/methyl_orange_btn"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_ph_methyl_orange" />

        <com.google.android.material.chip.Chip
            android:id="@+id/congo_red_btn"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_ph_congo_red" />

        <com.google.android.material.chip.Chip
            android:id="@+id/phenolphthalein_btn"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_ph_phenolphthalein" />

    </com.google.android.material.chip.ChipGroup>

</HorizontalScrollView>
